v3.4.9 (XXX-XX-XX)
-------------------

* Fixed issue #10078: FULLTEXT with sort on same field not working.

* Fixed issue #10062: AQL: Could not extract custom attribute.

* Made the mechanism in the Web UI of replacing and upgrading a foxx app more clear.

* Fixed a bug in the edge cache's internal memory accounting, which led
  to the edge cache underreporting its current memory usage.

* Fix strange shutdown hanger which came from the fact that currently
  libgcc/libmusl wrongly detect multi-threadedness in statically linked
  executables.

* Obtain new unique IDs via a background thread.

* Fixed a shutdown hanger because of a read/write lock race.

* Fixed "ArangoDB is not running in cluster mode" errors in active failover setups.
  This affected at least /_admin/cluster/health.

* Harden database creation against spurious "duplicate name" errors that
  were caused by other parallel operations lazily creating required
  system collections in the same database.

* Fixed the removal (including a collection drop) of an orphanCollection from a
  graph definition when using the arango shell. The boolean flag whether to drop
  the collection or not was not transferred properly.

* Fixed internal issue #633: made ArangoSearch functions BOOST, ANALYZER, MIN_MATCH
  callable with constant arguments. This will allow running queries where all arguments
  for these functions are deterministic and do not depend on loop variables.

* Added UI support to create documents in a collection using smartGraphAttribute
  and/or smartJoinAttribute.

* Add --server.statistics-history flag to allow disabling of only the historical
  statistics. Also added rocksdbengine.write.amplification.x100 statistics
  for measurement of compaction option impact. Enabled non-historical
  statistics for agents.

* Fixed output of `_listObjects()` function of "general-graph" and "smart-graph" 
  modules, which did not print the `_id` values of the return graphs correctly.
