@@ -1,6 +1,9 @@
 v3.4.9 (XXX-XX-XX)
 -------------------
 
+* Fixed issue #10193: Arangoexport does not handle line feeds when exporting as 
+  csv.
+
 * Fixed issue #10078: FULLTEXT with sort on same field not working.
 
 * Fixed issue #10062: AQL: Could not extract custom attribute.
